fixed an issue with mobile tile on smaller screens

--- a/app/config/public/landing.css
+++ b/app/config/public/landing.css
@@ -151,7 +151,6 @@
         display: block;
         color: #fff;
         font-size: 1em;
-        line-height: 1em;
         font-weight: bold;
     }
     .eea_tile {
